--- a/less/home-page.less
+++ b/less/home-page.less
@@ -25,14 +25,16 @@
         width: 70%;
         justify-content: center;
         margin: 0 auto;
+        align-items: center;
 
         @media @phone {
 
             width: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            max-width: 80%;
+            width: 500px;
+            height: auto;
         }
     
         .text-section {
@@ -44,7 +46,7 @@
         }
     
         .img-content {
-            width: 49%;
+            // width: 49%;
         }
     
             img {
